@@ -67,30 +67,6 @@ public class PostsService {
                 .build();
 
 
-//        //연관 리스트 매핑
-//        List<Requirement> newRequirements = dto.getRequirements().stream()
-//                .map(r -> Requirement.builder().content(r).post(post).build())
-//                .collect(Collectors.toList());
-//
-//        List<Benefit> newBenefits = dto.getBenefits().stream()
-//                .map(b -> Benefit.builder().content(b).post(post).build())
-//                .collect(Collectors.toList());
-//
-//        List<Attachment> newAttachments = dto.getAttachments().stream()
-//                .map(a -> Attachment.builder().fileName(a.getFileName()).url(a.getUrl()).build())
-//                .collect(Collectors.toList());
-//
-//
-//        // 기존 리스트 초기화 후 새 요소 추가
-//        post.getRequirements().clear();
-//        post.getRequirements().addAll(newRequirements);
-//
-//        post.getBenefits().clear();
-//        post.getBenefits().addAll(newBenefits);
-//
-//        post.getAttachments().clear();
-//        post.getAttachments().addAll(newAttachments);
-
 
         Posts updated = postsRepository.save(post);
         return PostsMapper.toDto(updated);
@@ -110,7 +86,7 @@ public class PostsService {
 
         return postsList.stream()
                 .map(PostsMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // 공고 상세 조회
@@ -137,7 +113,7 @@ public class PostsService {
         );
         return filteredPosts.stream()
                 .map(PostsMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // 검색어로 필터링된 공고 목록 조회
@@ -145,6 +121,6 @@ public class PostsService {
         List<Posts> postsList = postsRepository.findByKeyword(keyword);
         return postsList.stream()
                 .map(PostsMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
